# pytorch-layer-calculator

./: .gitignore  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.streamlit/: config.toml
